[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy-multiple-db"
version = "3.0.0"
description = "Explicit SQLAlchemy session management for multiple named databases"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Pavel Liashkov", email = "pavel.liashkov@protonmail.com" }]
keywords = ["sqlalchemy", "database", "session", "multi-database"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["sqlalchemy>=2.0.51"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[project.urls]
Changelog = "https://github.com/bigbag/sqlalchemy-multiple-db/blob/main/CHANGELOG.md"
Homepage = "https://github.com/bigbag/sqlalchemy-multiple-db"
Issues = "https://github.com/bigbag/sqlalchemy-multiple-db/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlalchemy_multiple_db"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-config"
